--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(Estructura_de_datos C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(Estructura_de_datos main.c)
+add_executable(Estructura_de_datos
+        punteros.c)
