--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ project(Estructura_de_datos C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(Estructura_de_datos
-        punteros.c
-        valor_y_referencia.c
-        struct.c
-        struct_y_arreglo.c
-        listas_enlazadas.c
+        Practica/punteros.c
+        Practica/valor_y_referencia.c
+        Practica/struct.c
+        Practica/struct_y_arreglo.c
+        Practica/listas_enlazadas.c
         Tareas/tareaG1.c)
