--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,10 @@ set(CMAKE_C_STANDARD 11)
 add_executable(Estructura_de_datos
         Practica/punteros.c
         Practica/valor_y_referencia.c
-        Practica/struct.c
+        Practica/01_struct.c
         Practica/struct_y_arreglo.c
         Practica/listas_enlazadas.c
-        Tareas/tareaG1.c)
+        Tareas/tareaG1.c
+        Practica/practica.c
+        Talleres/TallerG1.c
+        Practica/struct_01.c)
